# ChangeLog for dev-perl/CPAN-Mini
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.11 2007/01/07 19:25:04 mcummings Exp $

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  CPAN-Mini-0.40.ebuild, -CPAN-Mini-0.500.ebuild, -CPAN-Mini-0.550.ebuild,
  CPAN-Mini-0.551.ebuild:
  Marking sparc stable

*CPAN-Mini-0.551 (22 Nov 2006)

  22 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +CPAN-Mini-0.551.ebuild:
  Version bump

*CPAN-Mini-0.550 (20 Aug 2006)

  20 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  +CPAN-Mini-0.550.ebuild:
  Version bump

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  CPAN-Mini-0.40.ebuild, CPAN-Mini-0.500.ebuild:
  Adding perl dep; fixed DEPEND

*CPAN-Mini-0.500 (17 Jul 2006)

  17 Jul 2006; Aaron Kulbe <superlag@gentoo.org> +CPAN-Mini-0.500.ebuild:
  Version bump. Added ~amd64.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> CPAN-Mini-0.40.ebuild:
  Mark 0.40 stable on ia64

  03 Jul 2006; Christian Hartmann <ian@gentoo.org> CPAN-Mini-0.40.ebuild:
  Fixed RDEPEND wrt bug #134781

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> CPAN-Mini-0.40.ebuild:
  Mark 0.40 ~ia64

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  -CPAN-Mini-0.36.ebuild, CPAN-Mini-0.40.ebuild:
  Marking x86 sparc stable

*CPAN-Mini-0.40 (22 Nov 2005)

  22 Nov 2005; Michael Cummings <mcummings@gentoo.org>
  CPAN-Mini-0.36.ebuild, +CPAN-Mini-0.40.ebuild:
  Version bump, unmasking sparc and x86

*CPAN-Mini-0.36 (08 Mar 2005)

  08 Mar 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +CPAN-Mini-0.36.ebuild:
  Provides minicpan, a means of creating a portable CPAN
