@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Cache-Simple-TimedExpiry
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Simple-TimedExpiry/ChangeLog,v 1.22 2007/01/07 19:28:57 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Simple-TimedExpiry/ChangeLog,v 1.23 2007/01/07 19:30:14 mcummings Exp $
+
+  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  Cache-Simple-TimedExpiry-0.27.ebuild:
+  Marking amd64 stable
 
   07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   Cache-Simple-TimedExpiry-0.23.ebuild,
