@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/CPAN-Mini
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.11 2007/01/07 19:25:04 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.12 2007/01/07 19:27:05 mcummings Exp $
+
+  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  CPAN-Mini-0.551.ebuild:
+  Marking amd64 stable
 
   07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   CPAN-Mini-0.40.ebuild, -CPAN-Mini-0.500.ebuild, -CPAN-Mini-0.550.ebuild,
